# poloidal_flow

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml
scripts/: get_apsd.py  get_cmos_pics.py  get_cpsd.py  poloidal_modulation.py  process_ccf.py  process_cmos_images.py  read_spatcal.py  save_data.py
src/poloidal_flow/: __init__.py  analysis.py  config.py  pipeline.py  plotting.py  reading.py
src/poloidal_flow/beam_axis/: pipeline.py  process_distances.ipynb
src/poloidal_flow/core/: analysis.py  config.py  reading.py
src/poloidal_flow/poldef_spatcal/: cmos_spatcal_read.py
src/poloidal_flow/visualization/: __init__.py  plotting.py
